finish meals section markup and styling

--- a/src/components/Layout/HeaderCart.module.scss
+++ b/src/components/Layout/HeaderCart.module.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
 }
 .badge {
-  background-color: var(--color-secondary);
+  background-color: var(--color-light);
   font-size: 1.5rem;
   padding: 0.25rem 8px;
   border-radius: 25px;
