--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -5,8 +5,9 @@
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 3rem 6rem;
+  padding: 2rem 0;
   color: var(--color-light);
+  background-color: rgba(0, 0, 0, 0.4);
   font-size: 2rem;
   z-index: 6;
   a {
