--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -5,8 +5,17 @@
 
 h2 {
   @extend %heading;
+  font-size: 3.2rem;
+  text-align: center;
+  letter-spacing: 1.1px;
 }
 h3 {
   @extend %heading;
   font-size: 2.4rem;
+}
+
+h4 {
+  font-size: 1.8rem;
+  text-align: center;
+  letter-spacing: 1px;
 }
