--- a/src/components/Meals/MealItem/MealItem.module.scss
+++ b/src/components/Meals/MealItem/MealItem.module.scss
@@ -1,5 +1,6 @@
 .card {
   width: 90%;
+  position: relative;
 }
 
 .mealItem {
@@ -7,6 +8,7 @@
     width: 100%;
     position: relative;
   }
+  padding-bottom: 5.6rem;
 }
 
 .details {
@@ -53,10 +55,15 @@
       font-size: 2.4rem;
       width: 100%;
       border: none;
+      border-radius: 10rem;
     }
   }
 }
 
 .btn {
-  margin: 0 auto;
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
 }
