--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -14,6 +14,8 @@
   left: 50%;
   transform: translateX(-50%);
   width: 60%;
+  min-height: 50vh;
+  max-height: 70vh;
   background-color: white;
   padding: 1rem;
   border-radius: 1.4rem;
