--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -17,7 +17,7 @@
   min-height: 50vh;
   max-height: 70vh;
   background-color: white;
-  padding: 1rem;
+  padding: 3rem 4rem 1rem;
   border-radius: 1.4rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
