--- a/src/components/UI/Button.module.scss
+++ b/src/components/UI/Button.module.scss
@@ -1,4 +1,7 @@
 .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   border-radius: 10rem;
   font-family: inherit;
