add cart badge animation

--- a/src/components/Layout/HeaderCart.module.scss
+++ b/src/components/Layout/HeaderCart.module.scss
@@ -18,3 +18,25 @@
   top: 3px;
   right: -32%;
 }
+
+.bump {
+  animation: bump 1s ease-out;
+}
+
+@keyframes bump {
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(0.9);
+  }
+  30% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
