--- a/src/components/Meals/AvailableMeals.module.scss
+++ b/src/components/Meals/AvailableMeals.module.scss
@@ -6,3 +6,10 @@
     gap: 4.8rem;
   }
 }
+
+.loading {
+  text-align: center;
+  color: var(--color-primary);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
