--- a/src/components/Meals/AvailableMeals.module.scss
+++ b/src/components/Meals/AvailableMeals.module.scss
@@ -7,9 +7,14 @@
   }
 }
 
-.loading {
+.loading,
+.error {
   text-align: center;
   color: var(--color-primary);
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+.error {
+  color: red;
 }
