--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,4 +1,6 @@
 .cartItems {
+  max-height: 40rem;
+  overflow: auto;
   position: relative;
 }
 
@@ -6,28 +8,31 @@
   font-size: 3rem;
   display: flex;
   justify-content: space-between;
+  align-content: flex-end;
   span {
     color: var(--color-primary);
   }
   border-bottom: 1px solid var(--color-gray);
 }
 
-.actions {
-  display: flex;
+.btnClose {
   position: absolute;
-  gap: 2rem;
-  bottom: 2rem;
-  right: 1rem;
-  button {
-    font-size: 3.2rem;
+  top: 8px;
+  right: 2rem;
+  font-size: 3rem;
+  font-family: inherit;
+  border: none;
+  background-color: var(--color-light);
+  color: var(--color-gray);
+  cursor: pointer;
+  &:hover {
+    color: red;
   }
-  .close {
-    background-color: white;
-    color: var(--color-gray);
-    &:hover {
-      color: var(--color-primary);
-    }
-  }
+}
+
+.btnOrder {
+  margin-left: auto;
+  margin-top: 4rem;
 }
 
 .quantity {
