--- a/src/components/Meals/MealItem/MealItem.module.scss
+++ b/src/components/Meals/MealItem/MealItem.module.scss
@@ -51,7 +51,7 @@
     input {
       font-family: inherit;
       color: var(--color-light);
-      padding: 2px 4px;
+      padding: 2px 1.2rem;
       text-align: center;
       font-size: 2.4rem;
       width: 100%;
