--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -23,7 +23,7 @@
   font-family: inherit;
   border: none;
   background-color: var(--color-light);
-  color: var(--color-gray);
+  color: #666;
   cursor: pointer;
   &:hover {
     color: red;
