--- a/src/components/Cart/Checkout.module.scss
+++ b/src/components/Cart/Checkout.module.scss
@@ -1,12 +1,3 @@
-.modal {
-  position: relative;
-}
-
-.checkout {
-  display: grid;
-  grid-template-columns: repeat();
-}
-
 .btnClose {
   position: absolute;
   top: 8px;
@@ -19,6 +10,47 @@
   cursor: pointer;
   &:hover {
     color: red;
+  }
+}
+
+.heading {
+  margin-bottom: 4rem;
+}
+
+.checkout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  justify-items: center;
+  max-height: 30rem;
+  overflow: auto;
+  gap: 3.2rem;
+  font-size: 2rem;
+  .orders {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+.control {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin-bottom: 2rem;
+  input {
+    font-family: inherit;
+    color: var(--color-dark);
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    padding: 1rem;
   }
 }
 
@@ -37,4 +69,12 @@
     background-color: var(--color-dark);
     color: var(--color-gray);
   }
+}
+
+.itemName {
+  color: var(--color-primary);
+}
+
+.total {
+  color: var(--color-primary);
 }
