--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -26,6 +26,27 @@
   }
 }
 
+.deliveryHours-wrapper {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  .deliveryHours {
+    cursor: pointer;
+    background-color: var(--color-primary);
+    border: none;
+    font-family: inherit;
+    color: inherit;
+
+    font-size: 2rem;
+    letter-spacing: 1px;
+    padding: 1rem 2.4rem;
+    border-radius: 10rem;
+    option {
+      font-family: inherit;
+    }
+  }
+}
+
 @keyframes bounce {
   from {
     transform: translateY(-5px);
