--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -14,6 +14,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 60%;
+  max-width: 80%;
   min-height: 20vh;
   max-height: 70vh;
   background-color: white;
