--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -8,7 +8,7 @@
   background-color: rgba(0, 0, 0, 0.75);
 }
 
-.modal {
+.modalOverlay {
   position: fixed;
   top: 20vh;
   left: 50%;
@@ -23,5 +23,5 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
-  overflow: auto;
+  overflow: hidden;
 }
