add testimonial section

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -2,6 +2,7 @@
   --color-primary: #ff7d00;
   --color-primary-dark: #b35800;
   --color-primary-light: #ffa44d;
+  --color-secondary: #fdf2e9;
   --color-dark: #1c1c1c;
   --color-gray: #daddd8;
   --color-light: #fafaff;
