--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -15,7 +15,8 @@ h3 {
 }
 
 h4 {
-  font-size: 1.8rem;
+  font-size: 4rem;
   text-align: center;
   letter-spacing: 1px;
+  margin-bottom: 6rem;
 }
