implement local storage to user name and contact

--- a/src/components/Layout/Header/DeliveryLoc.module.scss
+++ b/src/components/Layout/Header/DeliveryLoc.module.scss
@@ -11,6 +11,6 @@
     background-color: var(--color-primary-light);
     border: none;
     color: var(--color-light);
-    width: fit-content;
+    width: 100%;
   }
 }
