--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
 @forward './sass/base';
 @forward './sass/typography';
+@forward './sass/mixins';
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
