--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -16,6 +16,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
+  min-width: 200rem;
+  margin: 0;
 }
 
 .heading {
