--- a/src/components/Testimonial/Testimonial.module.scss
+++ b/src/components/Testimonial/Testimonial.module.scss
@@ -1,6 +1,5 @@
 .sectionTestimonials {
-  padding: 5rem 10rem;
-  background-color: var(--color-secondary);
+  border: solid 2px var(--color-secondary);
 }
 
 .grid-wrapper {
