--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -47,10 +47,16 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: #666;
-  max-width: 200rem;
+  min-width: 60rem;
   overflow-x: hidden;
 }
 
 ul {
   list-style: none;
+}
+
+section {
+  max-width: 160rem;
+  margin: 4rem auto;
+  padding: 2rem 4rem;
 }
