add active order markup

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,7 +4,7 @@
   --color-primary-dark: #b35800;
   --color-primary-light: #ffa44d;
   --color-secondary: #fdf2e9;
-  --color-dark: #1c1c1c;
+  --color-dark: #555;
   --color-gray: #daddd8;
   --color-light: #fafaff;
 }
