--- a/src/components/FeaturedIn/FeaturedIn.module.scss
+++ b/src/components/FeaturedIn/FeaturedIn.module.scss
@@ -1,6 +1,7 @@
 .section {
-  margin-top: -9rem;
+  margin-top: -12rem;
   max-width: 200rem;
+
   p {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
@@ -24,7 +25,7 @@
     justify-content: space-around;
   }
   img {
-    height: 4rem;
+    max-height: 4rem;
     display: inline;
     filter: grayscale(1);
     opacity: 65%;
