--- a/src/components/Meals/AvailableMeals.module.scss
+++ b/src/components/Meals/AvailableMeals.module.scss
@@ -1,7 +1,7 @@
 .availableMeals {
   ul {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     justify-items: center;
     gap: 2rem;
   }
