--- a/src/components/Testimonial/Testimonial.module.scss
+++ b/src/components/Testimonial/Testimonial.module.scss
@@ -38,7 +38,7 @@
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   gap: 1.6rem;
   padding: 1.6rem;
   figure {
