--- a/src/components/Cart/Checkout.module.scss
+++ b/src/components/Cart/Checkout.module.scss
@@ -89,9 +89,11 @@
 }
 
 .total {
+  margin-bottom: 2rem;
   grid-column: 1/-1;
   text-align: center;
   font-size: 2.4rem;
+
   &__amount {
     color: var(--color-primary);
   }
