--- a/src/components/FeaturedIn/FeaturedIn.module.scss
+++ b/src/components/FeaturedIn/FeaturedIn.module.scss
@@ -1,7 +1,5 @@
+@use '../../sass/mixins' as *;
 .section {
-  margin-top: -12rem;
-  max-width: 200rem;
-
   p {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
@@ -10,7 +8,6 @@
     text-transform: uppercase;
     text-align: center;
     font-size: 1.4rem;
-
     &::after,
     &::before {
       display: block;
@@ -23,11 +20,26 @@
   ul {
     display: flex;
     justify-content: space-around;
+    @include query(tabLand) {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-items: center;
+      justify-content: center;
+      li {
+        &:nth-child(4) {
+          grid-column: span 2;
+        }
+        &:last-child {
+          justify-self: start;
+          margin-left: -10rem;
+        }
+      }
+    }
   }
   img {
     max-height: 4rem;
     display: inline;
     filter: grayscale(1);
-    opacity: 65%;
+    opacity: 90%;
   }
 }
