--- a/src/components/Cart/Checkout.module.scss
+++ b/src/components/Cart/Checkout.module.scss
@@ -50,7 +50,8 @@
   align-items: center;
   margin-bottom: 2rem;
   input,
-  select {
+  select,
+  textarea {
     font-family: inherit;
     color: var(--color-dark);
     font-weight: 500;
